--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>br.com.eduardoPortfolio.springForum</groupId>
+  <groupId>com.eduardoPortfolio.springForum</groupId>
   <artifactId>springForum</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>springForum Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+  	<spring.version>4.3.10.RELEASE</spring.version>
+  </properties>
   <dependencies>
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${spring.version}</version>
+    </dependency>
+    
+    <dependency>
+    	<groupId>jstl</groupId>
+    	<artifactId>jstl</artifactId>
+    	<version>1.2</version>
+    	<scope>provided</scope>
+	</dependency>
+    
   </dependencies>
   <build>
     <finalName>springForum</finalName>
