--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,19 @@
             <el-ignored>false</el-ignored>
         </jsp-property-group>
     </jsp-config>
+    
+    <listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+			/WEB-INF/spring/spring-servlet.xml
+			/WEB-INF/spring/spring-data.xml
+			/WEB-INF/spring/spring-security.xml
+		</param-value>
+	</context-param> 
  
   	<servlet>
       	<servlet-name>DispatcherServlet</servlet-name>
@@ -30,5 +43,17 @@
     	<servlet-name>DispatcherServlet</servlet-name>
     	<url-pattern>/</url-pattern>
  	</servlet-mapping>
+ 	
+ 	<!-- Filter to intercept external calls and apply Spring Security -->
+ 	<filter>
+    	<filter-name>springSecurityFilterChain</filter-name>
+    	<filter-class>
+        	org.springframework.web.filter.DelegatingFilterProxy
+    	</filter-class>
+	</filter>
+	<filter-mapping>
+    	<filter-name>springSecurityFilterChain</filter-name>
+    	<url-pattern>/*</url-pattern>
+	</filter-mapping>
  
 </web-app>
